--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "type": "git",
     "url": "git://github.com/devtyr/trello-burndown.git"
   },
-  "dependencies": {
-    "trello_ex": ">=0.2.0",
+  "dependencies": {    
+    "node-rest-client": "2.0.1",
     "optimist": ">=0.3.4",
     "xcharts": ">=0.1.3",
     "mime": ">=1.2.7",
