Added url rewrite rule for node app.

--- a/web.config
+++ b/web.config
@@ -9,5 +9,13 @@
         <add value="run.js" />
       </files>
     </defaultDocument>
+    <rewrite>
+      <rules>
+        <rule name="nodejs-urls">
+          <match url="/*" />
+          <action type="Rewrite" url="run.js" />
+        </rule>
+      </rules>
+    </rewrite>    
   </system.webServer>
 </configuration>
